added vis3-c: local top 5 purposes of aid for each country, and added in index

--- a/src/index.html
+++ b/src/index.html
@@ -208,6 +208,22 @@
           <span class="arrow">Open ↗</span>
         </div>
       </a>
+
+      <a href="vis3c.html" class="vis-card">
+        <div>
+          <div class="vis-title">Visualization 3C: Local Top 5 Aid Purposes</div>
+          <p class="vis-desc">
+            Represents top 5 funding sources for each country using a Glyph Map and pie charts.
+            Each pie chart is located at the center of a country and displays the "Local Top 5" purposes for that specific nation.
+          </p>
+        </div>
+        <div class="vis-tag"> Glyph Map · Categories</div>
+        <div class="vis-footer">
+          <span class="pill">Top 5 Purposes</span>
+          <span class="arrow">Open ↗</span>
+        </div>
+      </a>
+
     </main>
   </div>
 </body>
