added visualizaitons with updated data

--- a/src/DashBoard.html
+++ b/src/DashBoard.html
@@ -399,9 +399,9 @@
           <span class="pill">Vis 1&2</span>
         </a>
 
-        <a class="nav-button" href="vis2.html">
+        <a class="nav-button" href="vis3a.html">
           <span class="label">
-            <span class="label-strong">Aid Mix by Country</span>
+            <span class="label-strong">Geographical Distrubution of Aid</span>
             <span class="label-sub">Composition of aid types across countries</span>
           </span>
           <span class="pill">Vis 3</span>
